codegen/c/src/snapshots/transmute_codegen_c__tests__string.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
// Begin program code

#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// Generated struct declarations
typedef struct sN3stdN3str6string sN3stdN3str6string;

// Generated struct definitions
struct sN3stdN3str6string;

// Generated function declarations
void _TM0_F1f0(void *parent_frame);

// Generated function frames
typedef struct {
  void *parent;
} _TM0_F1f0__frame;

// Generated function declarations
void _TM0_F1f0(void *parent_frame)
{
  // prelude
  _TM0_F1f0__frame me = (_TM0_F1f0__frame){0};
  me.parent = parent_frame;

  {
    (sN3stdN3str6string*)tmc_stdlib_string_new((uint8_t*)"hello, world", 12);
    return;
  }
}

// End program code
