codegen/c/src/snapshots/transmute_codegen_c__tests__struct_empty.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
// Begin program code

#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// Generated struct declarations
typedef struct s11EmptyStruct s11EmptyStruct;

// Generated struct definitions
struct s11EmptyStruct;

// Generated function declarations


// Generated function frames


// Generated function declarations


// End program code
