codegen/c/src/snapshots/transmute_codegen_c__tests__struct_number_field.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
#include <stdbool.h>

struct s8MyStruct_3;

typedef struct {
  double field_20;
} s8MyStruct_3;
